# pdm-ml

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  TECHNICAL_DESIGN.md  TECH_REPORT.md  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: raw.dvc
docker/: Dockerfile  docker-compose.yml  prometheus.yml
notebooks/: 01_eda_exploration.ipynb
pipelines/: train_pipeline.py
scripts/: registry_list.py  rollback.py  test.py
src/: config.py
src/data/: loader.py  preprocessor.py
src/features/: engineering.py
src/models/: evaluator.py  trainer.py
src/serving/: app.py  schemas.py
tests/: conftest.py  test_api.py  test_evaluator.py  test_features.py  test_loader.py  test_preprocessor.py  test_trainer.py
